<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arknights Wallpaper</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="set_as_wp">Set as wallpaper</string>

    <string name="error_wpsetter">Live wallpaper setter not found!</string>
    <string name="set_as_wp_desc">Open system wallpaper selector</string>

    <string name="pref_file_name" translatable="false">wallpaper</string>
    <string name="pref_key_zoom" translatable="false">zoom</string>
    <string name="pref_key_translate_x" translatable="false">translate_x</string>
    <string name="pref_key_translate_y" translatable="false">translate_y</string>
    <string name="name_skadi2">Skadi the Corrupting Heart</string>
    <string name="name_skadi2_sublimation">Skadi the Corrupting Heart - Sublimation</string>
    <string name="pref_title_char">Character</string>
    <string name="pref_key_char" translatable="false">character</string>
    <string name="pref_key_bg" translatable="false">background</string>
    <string name="pref_default_char" translatable="false">skadi2_sublimation</string>
    <string name="pref_default_bg" translatable="false">bg_anniversary_1</string>
    <string name="name_specter2">Specter the Unchained</string>
    <string name="name_ling">Ling</string>
    <string name="name_nearl2">Nearl the Radiant Knight</string>
    <string name="pref_title_about">About</string>
    <string name="pref_title_oss_licenses">Open Source Licenses</string>
    <string name="name_phantom_focus">Phantom - Focus</string>
    <string name="name_cqbw_fugue">W - Fugue</string>
    <string name="name_dusk_everything_is_a_miracle">Dusk - Everything is a Miracle</string>
    <string name="name_nian_unfettered_freedom">Nian - Unfettered Freedom</string>
    <string name="name_surtr_summer">Surtr - Colorful Wonderland</string>
    <string name="name_ling_towering_is_cliff_of_nostalgia">Ling - Towering is Cliff of Nostalgia</string>
    <string name="name_goldenglow_summer_flowers_fa394">Goldenglow - Summer Flowers FA394</string>
    <string name="name_mizuki_summer_feast">Mizuki - Summer Feast</string>
    <string name="pref_title_bg">Background Image</string>
    <string name="name_reed_the_frame_shadow_curator">Reed The Flame Shadow - Curator</string>
    <string name="name_muelsyse">Muelsyse</string>

</resources>
